easynewsplus/service-elfhosted-internal.easynewsplus.yaml
apiVersion: v1
kind: Service
metadata:
  name: elfhosted-internal
  namespace: easynewsplus
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: elfhosted-internal-easynewsplus-${tailscale_suffix}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 1337
  selector:
    app.kubernetes.io/name: easynewsplus
  sessionAffinity: None
  type: ClusterIP
