easynewsplus/ciliumnetworkpolicy-easynewsplus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: easynewsplus
  namespace: easynewsplus
spec:
  endpointSelector: {}
  ingress:
    # Allow from any pods in the cluster
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "1337"

  egress:
    # Allow to the world
    - toEntities:
        - world

    # Allow to any pods in this namespace
    - toEndpoints:
        - {}

    # Allow to Kube DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
